@@ -6,6 +6,8 @@ synaptic (0.62) UNRELEASED; urgency=low
   * use new ListUpdate() code in apt
   * fix incorect transient settings when run with --no-main-window
     (thanks to Robert Colins for reporting)
+  * gtk/rgdebinstallprogress.cc:
+    - do not auto-close on Synaptic::closeZvt=true when a error happens
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Jan 2008 17:02:25 +0100
 
